<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagemPessoa"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/pessoa"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/nomeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" />

        <TextView
            android:id="@+id/telefoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefone" />

        <TextView
            android:id="@+id/enderecoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endereco" />

        <TextView
            android:id="@+id/generoTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_editar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/editar" />

        <Button
            android:id="@+id/btn_deletar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deletar" />
    </LinearLayout>

</FrameLayout>
