<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imagemCabeçalho"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/cadastro"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar_pessoa"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:textColorHint="@color/colorHint"/>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:textColorHint="@color/colorHint"/>

    <EditText
        android:id="@+id/editTextTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/telefone"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:textColorHint="@color/colorHint"/>

    <EditText
        android:id="@+id/editTextEndereco"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/endereco"
        android:background="@drawable/edit_text_background"
        android:padding="10dp"
        android:textColorHint="@color/colorHint"/>

    <Spinner
        android:id="@+id/spinner_genero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:padding="10dp"
        android:prompt="@string/spinner_prompt"/>

    <Button
        android:id="@+id/button_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:layout_marginTop="16dp"
        android:padding="12dp" />
</LinearLayout>
